src/objects/zqu__QuoteRatePlan__c.object
<CustomObject>
    <description>A QuoteRatePlan is part of a Quote.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>The Salesforce ID for the associated Account</description>
        <formula>zqu__Quote__r.zqu__Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvoidDuplicates__c</fullName>
        <description>For Avoiding the Storefront Duplicates</description>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.AvoidDuplicates__c)</formula>
        <inlineHelpText>For Avoiding the Storefront Duplicates</inlineHelpText>
        <label>Avoid Duplicates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CannotBeSoldPast__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.CannotBeSoldPast__c)</formula>
        <label>Cannot Be Sold Past</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountOverrideModified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DiscountOverrideModified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Override__c</fullName>
        <description>If the sales rep chooses to give a different discount % than what was calculated by Steelbrick, the &quot;custom&quot; discount amount is entered here.</description>
        <inlineHelpText>If the sales rep chooses to give a different discount % than what was calculated by Steelbrick, the &quot;custom&quot; discount amount is entered here.</inlineHelpText>
        <label>Discount Override %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <description>SF-1336. Used on the &quot;Edit Line Items&quot; page in the Quote creation workflow if the sales rep enters a higher discount % than what was calculated by Steelbrick.</description>
        <inlineHelpText>Used on the &quot;Edit Line Items&quot; page in the Quote creation workflow if the sales rep enters a higher discount % than what was calculated by Steelbrick.</inlineHelpText>
        <label>Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None-Autocalculated Discount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Discretionary Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Wire Switch Pitch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Is Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDE_Email_Launch_Date__c</fullName>
        <description>The day that LDE (direct marketing) emails are sent out. SF-1555.</description>
        <inlineHelpText>The day that LDE (direct marketing) emails are sent out. SF-1555.</inlineHelpText>
        <label>LDE Email Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Location/Vendor account that we are selling this product for. For example if selling a storefront, select the location that this product will be fulfilled against.</description>
        <inlineHelpText>The Location/Vendor account that we are selling this product for. For example if selling a storefront, select the location that this product will be fulfilled against.</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaximumSubscriptionTerm__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.Maximum_Subscription_Term__c)</formula>
        <label>Maximum Subscription Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumSubscriptionTerm__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.Minimum_Subscription_Term__c)</formula>
        <label>Minimum Subscription Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoAutomatedDiscount__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.No_Automated_Discount__c)</formula>
        <label>No Automated Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Booking_Discount__c</fullName>
        <description>Discount for Transaction, ticket CSP-903</description>
        <label>% per booking</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Next_Issue_ID__c</fullName>
        <formula>Print_Issue__r.Next_Issue__c</formula>
        <label>Print Issue - Next Issue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Previous_Issue_ID__c</fullName>
        <formula>Print_Issue__r.Previous_Issue__c</formula>
        <label>Print Issue - Previous Issue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Step_2_Date__c</fullName>
        <formula>Print_Issue__r.Step_2__c</formula>
        <label>Print Issue - Step 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Step_3_Date__c</fullName>
        <formula>Print_Issue__r.Step_3__c</formula>
        <label>Print Issue - Step 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Print Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <description>The date the parent Quote is valid though.</description>
        <formula>zqu__Quote__r.zqu__ValidUntil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date the parent Quote is valid though.</inlineHelpText>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires2X__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.Requires_2X__c)</formula>
        <label>Requires 2X</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresApproval__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.RequiresApproval__c)</formula>
        <label>Requires Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresCallbackTask__c</fullName>
        <formula>TEXT( zqu__ProductRatePlan__r.zqu__Product__r.RequiresCallbackTask__c )</formula>
        <label>Requires Callback Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresPaidStorefront__c</fullName>
        <formula>TEXT(zqu__ProductRatePlan__r.zqu__Product__r.RequiresPaidStorefront__c)</formula>
        <label>Requires Paid Storefront</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steelbrick_Calculated_Discount__c</fullName>
        <label>Steelbrick Calculated Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ZProduct_Name__c</fullName>
        <formula>zqu__ProductRatePlan__r.zqu__Product__r.Name</formula>
        <label>ZProduct Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Id_of_Migrated_Charge__c</fullName>
        <description>This Field is used to get populated by zuora Id of migrated charge.</description>
        <label>Zuora Id of Migrated Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__AmendmentType__c</fullName>
        <description>The type of amendment being made.</description>
        <label>Amendment Type</label>
        <picklist>
            <picklistValues>
                <fullName>NewProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoveProduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TermsAndConditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpdateProduct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__Quote__r.zqu__BillingEntity__r.zqu__EntityID__c</formula>
        <label>EntityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalPrpoId__c</fullName>
        <label>Original Product Rate Plan Option ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote rate plan of the parent product.</description>
        <inlineHelpText>The quote rate plan of the parent product.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Child Quote Rate Plans</relationshipLabel>
        <relationshipName>ChildQuoteRatePlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Product Rate Plan.</description>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteAmendment__c</fullName>
        <description>The identification of the amendment that this quote rate plan applies to.</description>
        <label>Quote Amendment</label>
        <referenceTo>zqu__QuoteAmendment__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductName__c</fullName>
        <label>Quote Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanFullName__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Quote.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanOverrideReferenceId__c</fullName>
        <description>The Id of another Quote Rate Plan in the order that this charge is acting on.</description>
        <label>Rate Plan Override Reference Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The unique ID corresponding to the root bundle that a Quote Rate Plan belongs to.</description>
        <inlineHelpText>The unique ID corresponding to the root bundle that a Quote Rate Plan belongs to.</inlineHelpText>
        <label>Root Quote Rate Plan ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificUpdateDate__c</fullName>
        <description>Specifies when to activate a future dated Update Order Action.</description>
        <inlineHelpText>Specifies when to activate a future dated Update Order Action.</inlineHelpText>
        <label>Specific Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan that the amendment is modifying. Required if AmendmentType is set to RemoveProduct or UpdateProduct.</description>
        <label>Subscription Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Time_Product_Added__c</fullName>
        <label>Time Product Added</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quote Rate Plan</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__AmendmentType__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Promotion_For_Credit_Card_ACH</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND (
 ISCHANGED( Discount_Reason__c ),
 ISPICKVAL(Discount_Reason__c,&apos;Wedding Wire Switch Pitch&apos;),
 !ISPICKVAL(zqu__Quote__r.zqu__PaymentMethod__c,&apos;Credit Card&apos;),
 !ISPICKVAL(zqu__Quote__r.zqu__PaymentMethod__c,&apos;ACH&apos;) 
)</errorConditionFormula>
        <errorMessage>Only payment Method of Credit Card or ACH/EFT on quotes can select &apos;Free Trial 3 Mos&apos; as the discount reason!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_For_Discount</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND (
 ISCHANGED( Discount_Reason__c ),
 ISPICKVAL(Discount_Reason__c,&apos;Wedding Wire Switch Pitch&apos;),
 Discount_Override__c != 0  
)</errorConditionFormula>
        <errorMessage>Don&apos;t fill discount override if select &apos;Free Trial 3 Mos&apos; as the discount reason!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_For_Initial_Term_12</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND (
 ISCHANGED( Discount_Reason__c ),
 ISPICKVAL(Discount_Reason__c,&apos;Wedding Wire Switch Pitch&apos;),
 zqu__Quote__r.zqu__InitialTerm__c != 12 
)</errorConditionFormula>
        <errorMessage>Select &apos;Free Trial 3 Mos&apos; as the discount reason only apply Initial Term is 12!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_For_Prospect_Account</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND (
 ISCHANGED( Discount_Reason__c ),
 ISPICKVAL(Discount_Reason__c,&apos;Wedding Wire Switch Pitch&apos;),
 OR(
 	 AND(
 		 NOT(ISBLANK(zqu__Quote__r.zqu__Account__r.Promotional_Quote__c)), 
 		 zqu__Quote__r.zqu__Account__r.Promotional_Quote__c != zqu__Quote__c 
 	 ),
 	 AND(
 	 	ISBLANK(zqu__Quote__r.zqu__Account__r.Promotional_Quote__c),
 	 	NOT(ISBLANK(TEXT(zqu__Quote__r.zqu__Account__r.Account_Anniversary_Status__c))), 
	        NOT(ISPICKVAL(zqu__Quote__r.zqu__Account__r.Account_Anniversary_Status__c,&apos;Prospect&apos;))
 	 )
  )
)</errorConditionFormula>
        <errorMessage>Only Accounts with an Anniversary Status of Prospect can select &apos;Free Trial 3 Mos&apos; as the discount reason!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_For_Storefront_and_FV</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND (
 ISCHANGED( Discount_Reason__c ),
 ISPICKVAL(Discount_Reason__c,&apos;Wedding Wire Switch Pitch&apos;),
 !CONTAINS(zqu__QuoteProductName__c, &apos;Storefront&apos;),
 OR( CONTAINS(zqu__QuoteProductName__c, &apos;Premium&apos;),
     !CONTAINS(zqu__QuoteProductName__c, &apos;Featured Vendor&apos;)
 )   
)</errorConditionFormula>
        <errorMessage>Only storefront and featured vendor can select &apos;Free Trial 3 Mos&apos; as the discount reason!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_a_different_discount_reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   Discount_Override__c &gt; Steelbrick_Calculated_Discount__c,
   ISPICKVAL( Discount_Reason__c, &apos;None - Autocalculated Discount&apos;)
)</errorConditionFormula>
        <errorDisplayField>Discount_Reason__c</errorDisplayField>
        <errorMessage>When overriding the discount, you must choose a different reason</errorMessage>
    </validationRules>
</CustomObject>